# deskercise

./: .gitignore  .pre-commit-config.yaml  README.md  config.json  deskercise  deskercise.py  exercises.json  pyproject.toml  test_deskercise.py
.github/workflows/: ci.yml
media/: README.md
